refactoring icon alignment issue

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -24,7 +24,7 @@
 .fontIcon {
     margin-top:45px;
     padding-right: 5px;
-    margin-left: 110px;
+    margin-left: 120px;
     color: white;
     font-size: 3rem;
     /* text-align: center; */
